tests/invalid/invalid_field_access.pith
struct Point:
    pub x: Int

fn main():
    p := Point(1)
    p.z
